--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -3,7 +3,7 @@
 <body>
  <nav class="blue lighten-2">
   <div class="nav-wrapper">
-    <a href="#" class="brand-logo">Logo</a>
+    <a href="#" class="brand-logo">miniblog</a>
     <ul id="nav-mobile" class="right hide-on-med-and-down">
       <li><a href="/tweets/new">投稿する</a></li>
       <li><a href="badges.html">Components</a></li>
@@ -13,24 +13,25 @@
 </nav>
 
 <div class="row">
-<div class="col s12 m6">
-<div class="card cyan darken-3">
-<div class="card-content white-text">
-  <span class="card-title">Card</span>
-  <% @tweets.each do |tweet| %>
-   <div class="content-post">
-   	<%= simple_format(tweet.text) %>
+ <div class="col s12 m6">
+  <div class="card cyan darken-3">
+  	<% @tweets.each do |tweet| %>
+   <div class="card-content white-text">
+    <span class="card-title">Card</span>
+    <div class="content-post">
+   	 <%= simple_format(tweet.text) %>
+    </div>
    </div>
-  <% end %>
+   <div class="card-action cyan lighten-5">
+    <a href="#">編集</a>
+    <a href="#">削除</a>
+   </div>
+   <% end %>
+  </div>
+  <%= paginate(@tweets) %>
+ </div>
 </div>
-<div class="card-action">
-  <a href="#">編集</a>
-  <a href="#">削除</a>
-</div>
-</div>
-</div>
-</div>
-r
+
 
 <script type="text/javascript" src="./app.js"></script>
 </body>
