--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -20,20 +20,16 @@
 <div class="row">
  <div class="col s12 m6">
   <div class="card cyan darken-3">
-  	<% @tweets.each do |tweet| %>
+ <!--    <% @tweets.each do |tweet| %> -->
    <div class="card-content white-text">
-    <a href="/users/<%= tweet.user_id %>"><span class="card-title"><%= tweet.user.nickname %></span></a>
+    <a href="/users/<%= tweet.user_id %>"><span class="card-title"><!-- <%= tweet.user.nickname %> --></span></a>
     <div class="content-post">
-   	 <%= simple_format(tweet.text) %>
+<!--      <%= simple_format(tweet.text) %> -->
     </div>
    </div>
    <div class="card-action cyan lighten-5">
-   	<% if user_signed_in? && current_user.id == tweet.user_id %>
-    <%= link_to '編集', "/tweets/#{tweet.id}", method: :get %>
-    <%= link_to '削除',"/tweets/#{tweet.id}", method: :delete %>
-   <% end %>
    </div>
-   <% end %>
+<!--    <% end %> -->
   </div>
   <%= paginate(@tweets) %>
  </div>
