--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <body>
+
  <nav class="blue lighten-2">
   <div class="nav-wrapper">
-    <a href="#" class="brand-logo">miniblog</a>
+    <a href="/" class="brand-logo">miniblog</a>
     <ul id="nav-mobile" class="right hide-on-med-and-down">
     <% if user_signed_in? %>
       <li><a href="/tweets/new">投稿する</a></li>
