--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -2,7 +2,7 @@
 <html>
 <body>
 
- <nav class="blue lighten-2">
+ <nav class="green accent-2">
   <div class="nav-wrapper">
     <a href="/" class="brand-logo">miniblog</a>
     <ul id="nav-mobile" class="right hide-on-med-and-down">
